[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/Environment/reload.png" type="Texture" id=4]
[ext_resource path="res://GFX/Environment/back.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 32
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GUI" type="CanvasLayer"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="TimeLeft" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "500"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font", "theme" ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -45.0
margin_top = 8.0
margin_right = 23.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 8
alignment = 1
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="ReloadButton" type="TextureButton" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="BckButton" type="TextureButton" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 72.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="HBoxContainer/ReloadButton" to="." method="_on_ReloadButton_pressed"]
[connection signal="pressed" from="HBoxContainer/BckButton" to="." method="_on_BckButton_pressed"]
